syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint;tm_server_endpoint";

import "yandex/cloud/priv/datatransfer/v1/endpoint/common.proto";

message OracleConnection {
    oneof connection {
        OracleInstance instance = 1;
        string tns = 2;
    }
}
message OracleInstanceType {
    oneof instance_type {
        string sid = 1;
        string service_name = 2;
    }
}
message OracleInstance {
    string host = 3;
    int64 port = 4;
    OracleInstanceType instance_type = 5;
}
message OracleSource {
    OracleConnection connection = 8;
    string user = 4;
    Secret password = 5;
    string pdb = 9;
    repeated string include_tables = 6;
    repeated string exclude_tables = 7;
    bool convert_number_to_int64 = 10;
}
